# NegiIME-AndroidStudio-

./: README.md  index.html
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  NDK.cpp  NDK.h  NegiIME.cpp  NegiIME.h  config.h  message.pb.cc  message.pb.h  native-lib.cpp
app/src/main/cpp/conv/: basic_string.h  bitarray.cpp  bitarray.h  bitvector.cpp  bitvector.h  codes.h  compile.cpp  connector.cpp  connector.h  converter.cpp  converter.h  dict.suffix.h  dictionary.cpp  dictionary.h  freelist.h  global_utils.h  includes.h  lattice.cpp  lattice.h  louds.cpp  louds.h  loudstrie.cpp  loudstrie.h  nbestgenerator.cpp  nbestgenerator.h  nodedata.h  search.cpp  search.h  searcher.cpp  searcher.h  sparsearrayimage.cpp  sparsearrayimage.h  suffixDictionary.cpp  suffixDictionary.h  utils.cpp  utils.h  wordDictionary.cpp  wordDictionary.h
app/src/main/cpp/google/protobuf/: generated_message_reflection.cc  message.cc  text_format.cc
app/src/main/cpp/google/protobuf/stubs/: atomicops_internals_atomicword_compat.h  atomicops_internals_x86_gcc.h
app/src/main/java/negi/android/BaseInputMethodService/: DrawBase.java  InputAreaFrameLayout.java  InputMethodService.java  InputView.java  InputWindow.java  PreviewView.java  Stars.java  SwipeTracker.java
app/src/main/java/negi/android/BasicInputMethodService/: DrawKeyboard.java  DrawList.java  DrawTrace.java  InputManager.java  InputMethodService.java  InputView.java  ManageKeyboard.java  ManageList.java  ManageTrace.java
app/src/main/java/negi/android/BasicInputMethodService/symbols/: DrawMojiPages.java  Emojicon.java  ManageEmojiPages.java  Nature.java  Objects.java  People.java  Places.java  StaticEmojiconHandler.java  Symbols.java
app/src/main/java/negi/android/NDK/: CallbackListener.java  NDK.java
app/src/main/java/negi/android/NDK/SET/: Message.java
app/src/main/java/negi/android/ime/: CallbackListener.java  InputMethodService.java  NegiIME.java
app/src/main/res/anim/: input_method_fancy_enter.xml  input_method_fancy_exit.xml
app/src/main/res/drawable/: extract_edit_text.xml  keyboardbackground.xml
app/src/main/res/layout/: activity_main.xml  rootview.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-ja/: arrays.xml  strings.xml
app/src/main/res/xml/: method.xml  preferences.xml
